# peg-solitaire-solver

./: LICENSE  solitaire.cabal
app/: Main.hs
lib/: Solitaire.hs
