cabal-version:      2.4
name:               solitaire
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Remmarg0rPA
maintainer:         remmarg0rpa.remmarg0rpa@gmail.com

executable solitaire
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0, linear, ilist, containers
    hs-source-dirs:   app
    default-language: Haskell2010
