cabal-version:      2.4
name:               solitaire
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Remmarg0rPA
maintainer:         remmarg0rpa.remmarg0rpa@gmail.com

library solitaire-lib
  build-depends:    base >=4, linear, ilist, containers
  exposed-modules:  Solitaire
  hs-source-dirs:   lib
                    
executable solver
    main-is:          Main.hs
    build-depends:    base >=4, ghc, solitaire-lib
    hs-source-dirs:   app
    default-language: Haskell2010